--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,6 +35,8 @@ jobs:
     - run: ls -la topas_3_9/debian9
     - run: extensions/.github/workflows/install-topas.sh
     - run: ls -la topas_3_9/debian9
+    - run: ls -la topas_3_9/debian9/bin
+    - run: ls -la topas_3_9/debian9/lib
 
     - name: Save Executable as Artifact
       uses: actions/upload-artifact@v4
