--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,7 +33,23 @@ jobs:
 
     - run: ls -la
     - run: ls -la topas_3_9/debian9
-    - run: extensions/.github/workflows/install-topas.sh
+    - run: ls -la extensions
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+      with:
+        driver: docker # defaults to "docker-containerized"
+
+    - name: Build business-layer container
+      uses: docker/build-push-action@v2
+      with:
+        # using "load: true" forces the docker driver
+        # not necessary here, because we set it before
+        #load: true
+        tags: my-project/base:latest
+        context: business
+        file: extensions/Dockerfile
+
     - run: ls -la topas_3_9/debian9
     - run: ls -la topas_3_9/debian9/bin
     - run: ls -la topas_3_9/debian9/lib
