--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,6 +40,14 @@ jobs:
       with:
         driver: docker # defaults to "docker-containerized"
 
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
     - name: Build business-layer container
       uses: docker/build-push-action@v2
       with:
@@ -49,6 +57,8 @@ jobs:
         tags: my-project/base:latest
         context: topas_3_9/debian9
         file: extensions/Dockerfile
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new
 
     - run: ls -la topas_3_9/debian9
     - run: ls -la topas_3_9/debian9/bin
@@ -63,3 +73,7 @@ jobs:
           topas_3_9/debian9/lib
           topas_3_9/debian9/examples
 
+    - name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
