--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -52,6 +52,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: /home/runner/work/mynbio/mynbio
+	dockerfile: /home/runner/work/mynbio/mynbio/mynbio/Dockerfile
 
     - run: ls -la topas_3_9/debian9
     - run: ls -la topas_3_9/debian9/bin
