--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -51,8 +51,8 @@ jobs:
     - name: Build business-layer container
       uses: docker/build-push-action@v2
       with:
-        dockerfile: extensions/Dockerfile
-
+        context: /home/runner/work/mynbio/mynbio/extensions
+        #dockerfile: extensions/Dockerfile
 
     - run: ls -la topas_3_9/debian9
     - run: ls -la topas_3_9/debian9/bin
