--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,6 +31,7 @@ jobs:
       with:
         path: extensions
 
+    - run: cp extensions/Dockerfile .
     - run: ls -la
     - run: ls -la topas_3_9/debian9
     - run: ls -la extensions
@@ -52,7 +53,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: /home/runner/work/mynbio/mynbio
-        dockerfile: extensions/Dockerfile
+        #dockerfile: extensions/Dockerfile
 
     - run: ls -la topas_3_9/debian9
     - run: ls -la topas_3_9/debian9/bin
