--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,8 +33,10 @@ jobs:
 
     - run: cp extensions/Dockerfile .
     - run: ls -la
-    - run: ls -la topas_3_9/debian9
     - run: ls -la extensions
+    - run: ls -la topas_3_9/debian9
+    - run: ls -la topas_3_9/debian9/bin
+    - run: ls -la topas_3_9/debian9/lib
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -67,7 +69,7 @@ jobs:
           topas_3_9/debian9/lib
           topas_3_9/debian9/examples
 
-    - name: Move cache
-      run: |
-        rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+    #- name: Move cache
+    #  run: |
+    #    rm -rf /tmp/.buildx-cache
+    #    mv /tmp/.buildx-cache-new /tmp/.buildx-cache
