--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,8 +35,6 @@ jobs:
     - run: ls -la
     - run: ls -la extensions
     - run: ls -la topas_3_9/debian9
-    - run: ls -la topas_3_9/debian9/bin
-    - run: ls -la topas_3_9/debian9/lib
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -58,20 +56,7 @@ jobs:
     - name: Build business-layer container
       uses: docker/build-push-action@v2
       with:
-        context: /home/runner/work/mynbio/mynbio
-
-    - run: ls -la topas_3_9/debian9
-    - run: ls -la topas_3_9/debian9/bin
-    - run: ls -la topas_3_9/debian9/lib
-
-    - name: Save Executable as Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: Executable
-        path: |
-          topas_3_9/debian9/bin
-          topas_3_9/debian9/lib
-          topas_3_9/debian9/examples
+        context: .
 
     #- name: Move cache
     #  run: |
