--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,27 +4,18 @@ on:
   push:
     branches: [ master ]
 
-env:
-  BUILD_TYPE: Release
-
 jobs:
   Build_For_Docker:
     runs-on: ubuntu-latest
 
-    env:
-      TOPAS_SOURCE_PATH: "/home/runner/work/mynbio/mynbio/topas_3_9/debian9"
-      NBIO_SOURCE_PATH: "/home/runner/work/mynbio/mynbio/extensions"
-      TOPAS_BUILD_PATH: "/home/runner/work/topas-build"
-      BUILD_TYPE: Release
-
     steps:
-    - run: pwd
-
     - name: Checkout Topas
       uses: actions/checkout@v3
       with:
         repository: 'topasmc/topas-releases'
         path: ''
+
+    - run: ls -la topas_3_9/debian9
 
     - name: Checkout this nBio
       uses: actions/checkout@v3
@@ -32,9 +23,7 @@ jobs:
         path: extensions
 
     - run: cp extensions/Dockerfile .
-    - run: ls -la
     - run: ls -la extensions
-    - run: ls -la topas_3_9/debian9
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -53,10 +42,14 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build business-layer container
+    - name: Build and push
       uses: docker/build-push-action@v2
       with:
         context: .
+        push: false
+        tags: user/app:latest
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new
 
     - name: Move cache
       run: |
