--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,16 +9,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Topas
-      uses: actions/checkout@v3
+    - name: Checkout public release version of TOPAS
+      uses: actions/checkout@v4
       with:
         repository: 'topasmc/topas-releases'
         path: ''
 
     - run: ls -la topas_3_9/debian9
 
-    - name: Checkout this nBio
-      uses: actions/checkout@v3
+    - name: Checkout User's version of nBio
+      uses: actions/checkout@v4
       with:
         path: extensions
 
@@ -26,10 +26,10 @@ jobs:
     - run: ls -la extensions
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v3
 
     - name: Cache Docker layers
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ github.sha }}
@@ -37,16 +37,16 @@ jobs:
           ${{ runner.os }}-buildx-
 
     - name: Login to DockerHub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         context: .
-        push: false
+        push: true
         tags: user/app:latest
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new
