--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,68 +4,46 @@ on:
   push:
     branches: [ master ]
 
+env:
+  BUILD_TYPE: Release
+
 jobs:
   Build_For_Docker:
     runs-on: ubuntu-latest
 
+    env:
+      TOPAS_SOURCE_PATH: "topas_3_10/debian9"
+      NBIO_SOURCE_PATH: "extensions"
+      TOPAS_BUILD_PATH: "/home/runner/work/topas-build"
+      BUILD_TYPE: Release
+
     steps:
-    - name: Checkout public release version of TOPAS
-      uses: actions/checkout@v4
+    - run: pwd
+
+    - name: Checkout Topas
+      uses: actions/checkout@v3
       with:
         repository: 'topasmc/topas-releases'
         path: ''
 
-    - run: ls -la topas_3_9/debian9
-
-    - name: Checkout User's version of nBio
-      uses: actions/checkout@v4
+    - name: Checkout this nBio
+      uses: actions/checkout@v3
       with:
         path: extensions
 
-    - run: ls -la extensions
+    - run: ls -la
+    - run: ls -la topas_3_10/debian9
+    - run: extensions/.github/workflows/install-topas.sh
+    - run: ls -la topas_3_10/debian9
+    - run: ls -la topas_3_10/debian9/bin
+    - run: ls -la topas_3_10/debian9/lib
 
-    - run: cp topas_3_9/debian9/Dockerfile .
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Cache Docker layers
-      uses: actions/cache@v4
+    - name: Save Executable as Artifact
+      uses: actions/upload-artifact@v4
       with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+        name: Executable
+        path: |
+          topas_3_10/debian9/bin
+          topas_3_10/debian9/lib
+          topas_3_10/debian9/examples
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Build and test
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        load: true
-        tags: jiperl/nbio:test
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache-new
-
-    - name: Test
-      run: |
-        docker run --rm jiperl/nbio:test          
-
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: jiperl/nbio:latest
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache-new
-
-    - name: Move cache
-      run: |
-        rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
